--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="text-separator center-separator"></div>
             </div>
             
-            <div class="container in-row">
+            <div class="container in-row space-around">
                 <div class="container">
                     <p>🧭18 Rue de la colère, Paris, France</p>
                     <p>🖷+33 1 56 76 97 56</p>
