--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>🖷+33 1 56 76 97 56</p>
                     <p>📧support@luxevision.com</p>
                 </div>
-                <div class="container">
+                <div class="container width-limit">
                     <div data-tf-widget="L5CAiq4n" data-tf-opacity="100" data-tf-iframe-props="title=LuxeVision Contact" data-tf-transitive-search-params data-tf-disable-scroll data-tf-auto-resize data-tf-medium="snippet" style="width:190%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
                 </div>
             </div>
